<resources>
    <string name="app_name">MonoCamera</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="textView">"Welcome!"</string>
    <string name="textView7">"Launch Camera"</string>
    <string name="textView3">"Go to the Gallery"</string>
    <string name="textView4">" "</string>
    <string name="textView5">" "</string>
    <string name="textView2">"Exit"</string>
    <string name="title_activity_gallery">"Gallery"</string>
    <string name="title_activity_camera">"Main Menu"</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="captureBtnText">"Snap"</string>

    <string name="title_activity_camera_full">CameraFull</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="errorbox">"Wrong email format"</string>
    <string name="errorbox2">"Password has minimum 4 signs"</string>



</resources>
